# hdc

./: BUILD.gn  README.md  README_zh.md  build.md  bundle.json  hdc.gni  hdc.para.dac
hdc_rust/: BUILD.gn  Cargo.toml  build.md  build.rs
hdc_rust/src/: common.rs  config.rs  daemon_lib.rs  dep.cpp  host_transfer.rs  lib.rs  serializer.rs  transfer.rs  utils.rs
hdc_rust/src/cffi/: base.cpp  base.h  bridge.cpp  bridge.h  cmd.cpp  cmd.h  ffi_utils.h  getparameter.cpp  getparameter.h  log.cpp  log.h  mount.cpp  mount.h  mount_wrapper.cpp  oh_usb.cpp  oh_usb.h  parameter.h  sendmsg.cpp  sendmsg.h  serial_struct.cpp  serial_struct.h  serial_struct_define.h  sys_para.cpp  sys_para.h  system_depend.cpp  system_depend.h  transfer.cpp  uart.cpp  uart.h  uart_wrapper.cpp  usb_ffs.h  usb_types.h  usb_util.cpp  usb_util.h  usb_wrapper.cpp  utils.cpp  utils.h  win_dep.cpp
hdc_rust/src/cffi/host/: ctimer.cpp  ctimer.h  host_usb.cpp  host_usb.h  host_usb_wrapper.cpp
hdc_rust/src/common/: base.rs  context.rs  filemanager.rs  forward.rs  hdcfile.rs  hdctransfer.rs  jdwp.rs  sendmsg.rs  taskbase.rs  uds.rs  unittest.rs
hdc_rust/src/daemon/: auth.rs  daemon_app.rs  daemon_unity.rs  main.rs  mount.rs  shell.rs  sys_para.rs  task.rs  task_manager.rs
hdc_rust/src/daemon_lib/: auth.rs  bridge.rs  daemon_app.rs  daemon_unity.rs  mod.rs  mount.rs  shell.rs  sys_para.rs  task.rs  task_manager.rs
hdc_rust/src/host/: auth.rs  client.rs  host_app.rs  logger.rs  main.rs  parser.rs  server.rs  task.rs  translate.rs  tty_utility.rs  unittest.rs
hdc_rust/src/host_transfer/: host_usb.rs
hdc_rust/src/serializer/: native_struct.rs  pack_assemble.rs  pack_struct.rs  serialize.rs  unittest.rs
hdc_rust/src/tar/: compress.rs  decompress.rs  entry.rs  header.rs
hdc_rust/src/transfer/: base.rs  buffer.rs  command_queue.rs  host_usb.rs  tcp.rs  uart.rs  uart_wrapper.rs  usb.rs
hdcd_user_permit/: BUILD.gn
hdcd_user_permit/src/: connection.cpp  connection.h  main.cpp
scripts/: dev_hdc_test.py  hdc_L1_test.py  hdc_hash_gen.py  hdc_medium_test.py  hdc_normal_test.py  hdc_test.py
src/: CMakeLists.txt
src/common/: async_cmd.cpp  async_cmd.h  auth.cpp  auth.h  base.cpp  base.h  channel.cpp  channel.h  circle_buffer.cpp  circle_buffer.h  common.h  compress.cpp  compress.h  debug.cpp  decompress.cpp  decompress.h  define.h  define_plus.h  entry.cpp  entry.h  file.cpp  file.h  file_descriptor.cpp  file_descriptor.h  forward.cpp  forward.h  header.cpp  header.h  serial_struct.h  serial_struct_define.h  session.cpp  session.h  task.cpp  task.h  tcp.cpp  transfer.cpp  transfer.h  uart.cpp  uart.h  usb.cpp
src/daemon/: CMakeLists.txt  daemon.cpp  daemon.h  daemon_app.cpp  daemon_app.h  daemon_bridge.cpp  daemon_common.h  daemon_forward.cpp  daemon_forward.h  daemon_tcp.cpp  daemon_tcp.h  daemon_uart.cpp  daemon_unity.cpp  daemon_unity.h  daemon_usb.cpp  daemon_usb.h  jdwp.cpp  jdwp.h  main.cpp  shell.cpp  shell.h  system_depend.cpp  usb_ffs.h
src/daemon/etc/: BUILD.gn  hdc.para  hdc.para.dac  hdcd.cfg  hdcd.para  hdcd.root.cfg  hdcd.root.para
src/host/: CMakeLists.txt  client.cpp  client.h  ext_client.cpp  ext_client.h  host_app.cpp  host_app.h  host_common.h  host_tcp.cpp  host_tcp.h  host_uart.cpp  host_uart.h  host_unity.cpp  host_unity.h  host_updater.cpp  host_updater.h  host_usb.cpp  host_usb.h  main.cpp  server.cpp  server.h  server_for_client.cpp  server_for_client.h  translate.cpp
src/register/: define_register.h  hdc_connect.cpp  hdc_connect.h  hdc_jdwp.cpp  hdc_jdwp.h
src/test/jdwp/: BUILD.gn  HdcJdwpSimulator.cpp  main.cpp
test/: BUILD.gn
test/fuzztest/jdwpreadstream_fuzzer/: JdwpReadStream_fuzzer.cpp  JdwpReadStream_fuzzer.h  project.xml
test/fuzztest/jdwpreadstream_fuzzer/corpus/: init
test/unittest/common/: host_uart_test.cpp  uart_test.cpp
test/unittest/register/: register_test.cpp
