[package]
name = "hdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "hdcd"
# path = "src/daemon/main.rs"

[[bin]]
name = "hdc"
path = "src/host/main.rs"

[build-dependencies]
cc = "1.0"

[features]
default = ["host"]
host = []

[dependencies]
libc = "0.2.154"
log = "0.4"
lz4 = "1.24.0"
openssl = "0.10.64"
lazy_static = "1.4.0"
humantime = "2.1.0"
env_logger = "0.11.3"
hilog_rust = { git = "https://gitee.com/openharmony/hiviewdfx_hilog.git"}

[dependencies.ylong_runtime]
git = "https://gitee.com/openharmony/commonlibrary_rust_ylong_runtime.git"
# path = "/Users/wetest/workplace/openharmoney/commonlibrary_rust_ylong_runtime"
features = ["full"]
