# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("daemon_etc") {
  deps = [
    ":hdc.para",
    ":hdc.para.dac",
    ":hdcd.cfg",
  ]
}

ohos_prebuilt_etc("hdcd.cfg") {
  source = "hdcd.root.cfg"
  if (build_variant == "user") {
    source = "hdcd.cfg"
  }
  relative_install_dir = "init"
  install_images = [
    "system",
    "updater",
  ]
  output = "hdcd.cfg"
  part_name = "hdc"
  subsystem_name = "developtools"
}

ohos_prebuilt_etc("hdc.para") {
  source = "hdc.para"
  relative_install_dir = "param"
  install_images = [
    "system",
    "updater",
  ]
  part_name = "hdc"
  subsystem_name = "developtools"
}

ohos_prebuilt_etc("hdc.para.dac") {
  source = "hdc.para.dac"
  relative_install_dir = "param"
  install_images = [
    "system",
    "updater",
  ]
  part_name = "hdc"
  subsystem_name = "developtools"
}
